[gd_scene load_steps=9 format=2]

[ext_resource path="res://props/moving_blocks/snow_moving_block.gd" type="Script" id=1]
[ext_resource path="res://assets/tileset.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[sub_resource type="Animation" id=2]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("tileset:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("tileset:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "squash_down"
tracks/0/type = "value"
tracks/0/path = NodePath("tileset:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -2.38419e-007, 22 ), Vector2( 0, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("tileset:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "squash_left"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("tileset:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -4, 20 ), Vector2( 0, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("tileset:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "squash_right"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("tileset:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 20 ), Vector2( 0, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("tileset:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "squash_up"
tracks/0/type = "value"
tracks/0/path = NodePath("tileset:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( -2.38419e-007, 18 ), Vector2( 0, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("tileset:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 0.9 ), Vector2( 1, 1 ) ]
}

[node name="cave_block_5_" type="KinematicBody2D"]
motion/sync_to_physics = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 20 )
shape = SubResource( 1 )

[node name="tileset" type="Sprite" parent="."]
position = Vector2( 0, 20 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 136, 0, 40, 40 )

[node name="block_anim" type="AnimationPlayer" parent="."]
autoplay = "default"
playback_process_mode = 0
anims/default = SubResource( 2 )
anims/squash_down = SubResource( 3 )
anims/squash_left = SubResource( 4 )
anims/squash_right = SubResource( 5 )
anims/squash_up = SubResource( 6 )

[node name="pos_top_left" type="Position2D" parent="."]
position = Vector2( -20, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="pos_top_right" type="Position2D" parent="."]
position = Vector2( 20, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="pos_bottom_left" type="Position2D" parent="."]
position = Vector2( -20, 40 )
__meta__ = {
"_edit_lock_": true
}

[node name="pos_bottom_right" type="Position2D" parent="."]
position = Vector2( 20, 40 )
__meta__ = {
"_edit_lock_": true
}
